--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://kumarb4u2.github.io/my-app-exp",
+  "homepage": "http://kumarb4u2.github.io/dppi",
   "name": "interview",
   "version": "0.1.0",
   "private": true,
